# Opencode

./: .air.toml  .cryoncode.json  .dockerignore  .envrc  .gitignore  .goreleaser.yml  .opencode.json  .sqlfluff  .termai.json  ACTIVE_AGENTS.md  API.md  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  NEXUS_SYSTEM_GUIDE.md  OpenCode.md  PROJECT_CONTEXT.md  README.md  README.zh-TW.md  SECURITY.md  TASKS.md  Tdcdmg1a  UNIX_REGRESSION_TEST_REPORT.md  buf.gen.yaml  buf.yaml  config.yaml  cryoncode-schema.json  default.nix  docker-compose.api.yml  flake.nix  go.mod  go.sum  install  main.go  main_test.go  opencode-schema.json  sqlc.yaml  termai-schema.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build.yml  docker-build.yml  golangci.yml  lint.yml  release.yml
.opencode/: opencode.db-shm  opencode.db-wal
cmd/: config.go  config_test.go  orchestrator.go  root.go  server.go
cmd/diff/: main.go
cmd/lsp/: main.go
cmd/mcp-lsp/: README.md  main.go  main_test.go
cmd/orchestrator/: main.go
docs/: api-reference.md  architecture.md  development-guide.md
frontend/: CHAT_PANEL_README.md  package-lock.json  package.json  tsconfig.json
opencode_rs/: .opencode.json  Cargo.toml
opencode_rs/src/: app.rs  config.rs  db.rs  main.rs  session.rs  tui.rs
opencode_rs/src/llm/: mod.rs  openai_client.rs
opencode_rs/src/tools/: fs_tools.rs  mod.rs
scripts/: check_hidden_chars.sh  release  snapshot
trenaudie_prompts/: prompt_fetch_context.md  prompt_iconify.md  prompt_plan_backend.md  prompt_plan_backend_02.md  prompt_websocket_frontend.md
(+323 files in other folders)
